commit 1. bullet color 2. position fixes 3. margin fixes for review 4. video size fixes 5. wrapped images around text 6. removed sections from page 2 and page 3

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,6 +195,10 @@ iframe {
 .purchase-methods a:hover {
     opacity: 90%;
 }
+
+.other-writings img {
+    max-width: 100%;
+}
 /* biography section */
 
 #biography {
@@ -403,6 +407,15 @@ footer a:hover {
 @media screen and (max-width: 1375px) {
     .review-slider {
         margin-left: 0 !important;
+    }
+    .top-row {
+        padding: 0 0.5rem;
+        padding-bottom: 1rem;
+    }
+}
+@media screen and (max-width: 1015px) {
+    .box-wrapper {
+        margin: 0 2rem;
     }
 }
 @media screen and (max-width: 825px) {
